--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,3 +10,18 @@
 
   </div>
 </section>
+
+<!-- defining an underscore.js template -->
+<script type='text/template' id='recipe-template'>
+<article>
+  <strong>Ingredients</strong>: <%= ingredients %><br>
+  <strong>Type</strong>: <%= type %><br>
+  <strong>Topping</strong>: <%= topping %><br>
+  <strong>Syrup</strong>: <%= syrup %><br>
+  <strong>Instructions</strong>: <%= instructions %><br>
+  <strong>Time</strong>: <%= time %><br>
+</article>
+</script>
+
+<!-- loading custom app -->
+<script src='/javascripts/app.js'></script>
