--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,11 +4,8 @@
   <em>Current Version:</em> {{version}}
 </p>
 
-<section>
+<section id='pancake-listing'>
   <h2>Pancakes Listing</h2>
-  <div class="pancakes">
-
-  </div>
 </section>
 
 <!-- defining an underscore.js template -->
